[package]
edition = "2021"
name = "core"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "tokio_rt",
] }
napi-derive = "2.12.2"
global-hotkey = "0.7.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
strum = "0.27.1"
strum_macros = "0.27.1"
once_cell = "1.21.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "windef",
    "winuser",
    "processthreadsapi",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
